--- a/HomeBudget.App/Views/ContentViews/FullViews/AddTransactionAndroidPageView.xaml
+++ b/HomeBudget.App/Views/ContentViews/FullViews/AddTransactionAndroidPageView.xaml
@@ -11,7 +11,7 @@
     xmlns:icons="clr-namespace:HomeBudget.App.Resources.Icons"
     xmlns:model="clr-namespace:HomeBudget.App.Models"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-    x:DataType="fullViewModels:ManageTransactionsPageViewModel">
+    x:DataType="fullViewModels:AddTransactionPageViewModel">
 
     <Grid BackgroundColor="{StaticResource Gray200}" RowDefinitions="Auto,*">
 
@@ -42,14 +42,12 @@
             </Grid>
         </Border>
 
-
         <Frame
-            Margin="15"
             Grid.Row="1"
-            VerticalOptions="Start"
+            Margin="15"
             Padding="15"
             BorderColor="{StaticResource Gray100}"
-            HasShadow="True">
+            VerticalOptions="Start">
 
             <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto" RowSpacing="5">
 
