--- a/HomeBudget.App/Views/ContentViews/IconSelectContentView.xaml
+++ b/HomeBudget.App/Views/ContentViews/IconSelectContentView.xaml
@@ -12,94 +12,98 @@
         <viewmodel:IconSelectContentViewModel />
     </ContentView.BindingContext>
 
-    <Frame
-        Padding="0"
-        BackgroundColor="{StaticResource GrayT100}"
-        BorderColor="Transparent"
-        IsVisible="{Binding IsVisible}">
+    <Grid
+        x:Name="Root"
+        BackgroundColor="{StaticResource Gray100}"
+        RowDefinitions="Auto,*">
 
-        <Frame
-            BackgroundColor="{StaticResource White}"
-            BorderColor="{StaticResource Gray100}"
-            HasShadow="True"
-            Margin="40"
-            Padding="5"
-            VerticalOptions="Center">
-            <Grid RowDefinitions="Auto,*">
+        <Border
+            Grid.Row="0"
+            Padding="20,20,20,20"
+            BackgroundColor="White"
+            Stroke="{StaticResource Gray100}"
+            StrokeThickness="1">
 
-                <Grid Grid.Row="0" ColumnDefinitions="*,*">
-                    <Button
-                        Grid.Column="0"
-                        Command="{Binding ToggleViewCommand}"
-                        FontSize="{StaticResource LargeFontSize}"
-                        HorizontalOptions="Start"
-                        Style="{StaticResource IconFlexButton}"
-                        Text="{x:Static icons:Icons.ArrowBackward}" />
+            <Border.StrokeShape>
+                <RoundRectangle CornerRadius="0,0,15,15" />
+            </Border.StrokeShape>
 
-                </Grid>
-
-                <ScrollView Grid.Row="1">
-                    <CollectionView ItemsSource="{Binding IconCategories}">
-                        <CollectionView.ItemTemplate>
-                            <DataTemplate x:DataType="model:IconCategory">
-                                <VerticalStackLayout>
-                                    <Label Style="{StaticResource H2Label}" Text="{Binding CategoryName}" />
-
-                                    <CollectionView ItemsSource="{Binding Icons}">
-                                        <CollectionView.ItemsLayout>
-                                            <GridItemsLayout Orientation="Vertical" Span="4" />
-                                        </CollectionView.ItemsLayout>
-                                        <CollectionView.ItemTemplate>
-                                            <DataTemplate x:DataType="model:IconItem">
-                                                <Frame BorderColor="Transparent">
-                                                    <Frame.GestureRecognizers>
-                                                        <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:IconSelectContentViewModel}}, Path=SelectIconCommand}" CommandParameter="{Binding}" />
-                                                    </Frame.GestureRecognizers>
-                                                    <Frame.Style>
-                                                        <Style BasedOn="{StaticResource RectangleSeletedBorderFrame}" TargetType="Frame">
-                                                            <Style.Triggers>
-                                                                <DataTrigger
-                                                                    Binding="{Binding IsSelected}"
-                                                                    TargetType="Frame"
-                                                                    Value="True">
-                                                                    <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
-                                                                </DataTrigger>
-                                                            </Style.Triggers>
-                                                        </Style>
-                                                    </Frame.Style>
-                                                    <Frame InputTransparent="True" Style="{StaticResource RectangleSeletedInnerFrame}">
-                                                        <Label Text="{Binding Unicode}">
-                                                            <Label.Style>
-                                                                <Style BasedOn="{StaticResource SeletedInnerIcon}" TargetType="Label">
-                                                                    <Style.Triggers>
-                                                                        <DataTrigger
-                                                                            Binding="{Binding IsSelected}"
-                                                                            TargetType="Label"
-                                                                            Value="True">
-                                                                            <Setter Property="TextColor" Value="{StaticResource Primary}" />
-                                                                        </DataTrigger>
-                                                                    </Style.Triggers>
-                                                                </Style>
-                                                            </Label.Style>
-                                                        </Label>
-                                                    </Frame>
-                                                </Frame>
-                                            </DataTemplate>
-                                        </CollectionView.ItemTemplate>
-                                    </CollectionView>
-
-                                </VerticalStackLayout>
-
-
-                            </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
-                </ScrollView>
-
-
+            <Grid ColumnDefinitions="Auto,*" ColumnSpacing="10">
+                <Button
+                    Margin="0"
+                    Padding="0"
+                    Command="{Binding ToggleViewCommand}"
+                    FontSize="{StaticResource ExtraLargeFontSize}"
+                    HorizontalOptions="Start"
+                    Style="{StaticResource NavigationIconButton}"
+                    Text="{x:Static icons:Icons.ArrowBackward}"
+                    TextColor="{StaticResource Secondary}" />
+                <Label
+                    Grid.Column="1"
+                    Style="{StaticResource H1Label}"
+                    Text="Wybór ikony" />
             </Grid>
+        </Border>
+
+        <ScrollView Grid.Row="1">
+            <CollectionView ItemsSource="{Binding IconCategories}">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="model:IconCategory">
+                        <Frame Margin="10,5,10,5" Padding="10">
+                            <VerticalStackLayout>
+                                <Label Style="{StaticResource H2Label}" Text="{Binding CategoryName}" />
+                                <CollectionView ItemsSource="{Binding Icons}">
+                                    <CollectionView.ItemsLayout>
+                                        <GridItemsLayout Orientation="Vertical" Span="5" />
+                                    </CollectionView.ItemsLayout>
+                                    <CollectionView.ItemTemplate>
+                                        <DataTemplate x:DataType="model:IconItem">
+                                            <Frame>
+                                                <Frame.GestureRecognizers>
+                                                    <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:IconSelectContentViewModel}}, Path=SelectIconCommand}" CommandParameter="{Binding}" />
+                                                </Frame.GestureRecognizers>
+                                                <Frame.Style>
+                                                    <Style BasedOn="{StaticResource RectangleSeletedBorderFrame}" TargetType="Frame">
+                                                        <Style.Triggers>
+                                                            <DataTrigger
+                                                                Binding="{Binding IsSelected}"
+                                                                TargetType="Frame"
+                                                                Value="True">
+                                                                <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
+                                                            </DataTrigger>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </Frame.Style>
+                                                <Frame InputTransparent="True" Style="{StaticResource RectangleSeletedInnerFrame}">
+                                                    <Label Text="{Binding Unicode}">
+                                                        <Label.Style>
+                                                            <Style BasedOn="{StaticResource SeletedInnerIcon}" TargetType="Label">
+                                                                <Style.Triggers>
+                                                                    <DataTrigger
+                                                                        Binding="{Binding IsSelected}"
+                                                                        TargetType="Label"
+                                                                        Value="True">
+                                                                        <Setter Property="TextColor" Value="{StaticResource Primary}" />
+                                                                    </DataTrigger>
+                                                                </Style.Triggers>
+                                                            </Style>
+                                                        </Label.Style>
+                                                    </Label>
+                                                </Frame>
+                                            </Frame>
+                                        </DataTemplate>
+                                    </CollectionView.ItemTemplate>
+                                </CollectionView>
+                            </VerticalStackLayout>
+
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </ScrollView>
 
 
-        </Frame>
-    </Frame>
+    </Grid>
+
+
 </ContentView>
