--- a/HomeBudget.App/Views/ContentViews/UniversalControls/DropdownSelectTransactionCategoryContentView.xaml
+++ b/HomeBudget.App/Views/ContentViews/UniversalControls/DropdownSelectTransactionCategoryContentView.xaml
@@ -3,6 +3,7 @@
     x:Class="HomeBudget.App.Views.ContentViews.UniversalControls.DropdownSelectTransactionCategoryContentView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:contentViews="clr-namespace:HomeBudget.App.Views.ContentViews"
     xmlns:controlModels="clr-namespace:HomeBudget.App.ViewModels.ContentViewModels.UniversalControls"
     xmlns:controls="clr-namespace:HomeBudget.App.Views.ContentViews.UniversalControls"
     xmlns:icons="clr-namespace:HomeBudget.App.Resources.Icons"
@@ -10,92 +11,125 @@
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     x:DataType="controlModels:DropdownTransactionCategoryContentViewModel">
 
-    <Frame
-        BackgroundColor="{StaticResource GrayT100}"
-        BorderColor="Transparent"
-        IsVisible="{Binding IsVisible}">
-        <Frame
-            Margin="20"
-            Padding="10"
-            BackgroundColor="{StaticResource White}"
-            BorderColor="{StaticResource Gray200}"
-            HasShadow="True">
-            <Grid RowDefinitions="Auto,Auto,*" RowSpacing="5">
-                <Grid Grid.Row="0" ColumnDefinitions="Auto,*">
-                    <Button
-                        Grid.Column="0"
-                        Command="{Binding ToggleViewCommand}"
-                        FontSize="{StaticResource ExtraLargeFontSize}"
-                        Style="{StaticResource IconFlexButton}"
-                        Text="{x:Static icons:Icons.ArrowBackward}" />
-                    <Label
-                        Grid.Column="1"
-                        Style="{StaticResource H2Label}"
-                        Text="Wybierz kategorię" />
-                </Grid>
 
-                <Frame
-                    Grid.Row="1"
-                    Padding="-2"
-                    BackgroundColor="{StaticResource Gray100}"
-                    BorderColor="{StaticResource Gray200}">
-                    <SearchBar
-                        BackgroundColor="Transparent"
-                        Placeholder="Szukanie"
-                        Text="{Binding SearchText}" />
-                </Frame>
+    <Grid
+        x:Name="Root"
+        BackgroundColor="{StaticResource Gray100}"
+        IsVisible="{Binding IsVisible}"
+        RowDefinitions="Auto,*">
 
-                <ScrollView Grid.Row="2">
-                    <CollectionView
-                        ItemsSource="{Binding FilteredTransactionCategories}"
-                        SelectedItem="{Binding SelectedCategory}"
-                        SelectedItems="{Binding SelectedCategories}"
-                        SelectionMode="{Binding SelectionMode}">
-                        <CollectionView.ItemTemplate>
-                            <DataTemplate x:DataType="model:TransactionCategory">
-                                <Grid ColumnDefinitions="Auto,*" RowDefinitions="*,Auto">
-                                    <Label
-                                        Grid.Row="0"
-                                        Grid.Column="0"
-                                        Margin="10"
-                                        Style="{StaticResource MaterialIcon}"
-                                        Text="{Binding IconUnicode}"
-                                        VerticalOptions="Center" />
-                                    <Label
-                                        Grid.Row="0"
-                                        Grid.Column="1"
-                                        LineBreakMode="TailTruncation"
-                                        Style="{StaticResource H2Label}"
-                                        Text="{Binding Name}"
-                                        VerticalOptions="Center" />
+        <Border
+            Grid.Row="0"
+            Padding="20,20,20,20"
+            BackgroundColor="White"
+            Stroke="{StaticResource Gray100}"
+            StrokeThickness="1">
 
-                                    <BoxView
-                                        Grid.Row="1"
-                                        Grid.ColumnSpan="3"
-                                        HeightRequest="1"
-                                        Color="{StaticResource Gray100}" />
+            <Border.StrokeShape>
+                <RoundRectangle CornerRadius="0,0,15,15" />
+            </Border.StrokeShape>
 
-                                    <VisualStateManager.VisualStateGroups>
-                                        <VisualStateGroup Name="CommonStates">
-                                            <VisualState Name="Normal">
-                                                <VisualState.Setters>
-                                                    <Setter Property="BackgroundColor" Value="Transparent" />
-                                                </VisualState.Setters>
-                                            </VisualState>
-                                            <VisualState Name="Selected">
-                                                <VisualState.Setters>
-                                                    <Setter Property="BackgroundColor" Value="{StaticResource Gray100}" />
-                                                </VisualState.Setters>
-                                            </VisualState>
-                                        </VisualStateGroup>
-                                    </VisualStateManager.VisualStateGroups>
-                                </Grid>
-                            </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
-
-                </ScrollView>
+            <Grid ColumnDefinitions="Auto,*" ColumnSpacing="10">
+                <Button
+                    Margin="0"
+                    Padding="0"
+                    Command="{Binding ToggleViewCommand}"
+                    FontSize="{StaticResource ExtraLargeFontSize}"
+                    HorizontalOptions="Start"
+                    Style="{StaticResource NavigationIconButton}"
+                    Text="{x:Static icons:Icons.ArrowBackward}"
+                    TextColor="{StaticResource Secondary}" />
+                <Label
+                    Grid.Column="1"
+                    Style="{StaticResource H1Label}"
+                    Text="Wybór kategorii" />
             </Grid>
-        </Frame>
-    </Frame>
+        </Border>
+
+        <Grid
+            Grid.Row="1"
+            Margin="10"
+            RowDefinitions="Auto,*"
+            RowSpacing="10">
+
+            <controls:AddInlistCategoryContentView Grid.Row="0" BindingContext="{Binding AddInlistCategoryVM}" />
+
+            <Frame Grid.Row="1" Padding="10">
+                <Grid RowDefinitions="Auto,*">
+                    <Frame
+                        Grid.Row="0"
+                        Padding="-2"
+                        BackgroundColor="{StaticResource Gray100}"
+                        BorderColor="{StaticResource Gray200}">
+                        <SearchBar
+                            BackgroundColor="Transparent"
+                            Placeholder="Szukanie"
+                            Text="{Binding SearchText}" />
+                    </Frame>
+                    <Grid Grid.Row="1">
+                        <RefreshView
+                            Command="{Binding ReloadCommand}"
+                            IsRefreshing="{Binding IsBusy, Mode=OneWay}"
+                            IsVisible="{Binding IsNotBusy}">
+                            <ScrollView>
+                                <CollectionView
+                                    ItemsSource="{Binding FilteredTransactionCategories}"
+                                    SelectedItem="{Binding SelectedCategory}"
+                                    SelectedItems="{Binding SelectedObjects}"
+                                    SelectionChangedCommand="{Binding SelectionChangedCommand}"
+                                    SelectionMode="{Binding SelectionMode}">
+                                    <CollectionView.ItemTemplate>
+                                        <DataTemplate x:DataType="model:TransactionCategory">
+                                            <Grid ColumnDefinitions="Auto,*" RowDefinitions="*,Auto">
+                                                <Label
+                                                    Grid.Row="0"
+                                                    Grid.Column="0"
+                                                    Margin="10"
+                                                    Style="{StaticResource MaterialIcon}"
+                                                    Text="{Binding IconUnicode}"
+                                                    VerticalOptions="Center" />
+                                                <Label
+                                                    Grid.Row="0"
+                                                    Grid.Column="1"
+                                                    LineBreakMode="TailTruncation"
+                                                    Style="{StaticResource H2Label}"
+                                                    Text="{Binding Name}"
+                                                    VerticalOptions="Center" />
+
+                                                <BoxView
+                                                    Grid.Row="1"
+                                                    Grid.ColumnSpan="3"
+                                                    HeightRequest="1"
+                                                    Color="{StaticResource Gray100}" />
+
+                                                <VisualStateManager.VisualStateGroups>
+                                                    <VisualStateGroup Name="CommonStates">
+                                                        <VisualState Name="Normal">
+                                                            <VisualState.Setters>
+                                                                <Setter Property="BackgroundColor" Value="Transparent" />
+                                                            </VisualState.Setters>
+                                                        </VisualState>
+                                                        <VisualState Name="Selected">
+                                                            <VisualState.Setters>
+                                                                <Setter Property="BackgroundColor" Value="{StaticResource Gray100}" />
+                                                            </VisualState.Setters>
+                                                        </VisualState>
+                                                    </VisualStateGroup>
+                                                </VisualStateManager.VisualStateGroups>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </CollectionView.ItemTemplate>
+                                </CollectionView>
+                            </ScrollView>
+                        </RefreshView>
+                    </Grid>
+
+                    <controls:ActivityIndicatorFullPageContentView Grid.Row="1" BindingContext="{Binding}" />
+
+                </Grid>
+            </Frame>
+        </Grid>
+
+        <contentViews:IconSelectContentView Grid.RowSpan="2" BindingContext="{Binding AddInlistCategoryVM.IconSelectVM}" />
+    </Grid>
 </ContentView>
