--- a/HomeBudget.App/Views/ContentViews/UniversalControls/SelectableButtonGroupView.xaml
+++ b/HomeBudget.App/Views/ContentViews/UniversalControls/SelectableButtonGroupView.xaml
@@ -12,6 +12,7 @@
         Padding="2"
         BackgroundColor="{StaticResource Gray200}"
         BorderColor="Transparent"
+        CornerRadius="6"
         HorizontalOptions="FillAndExpand"
         VerticalOptions="FillAndExpand">
         <CollectionView
@@ -26,9 +27,11 @@
                 <DataTemplate x:DataType="viewmodels:OptionItem">
                     <Button
                         x:Name="OptionButton"
+                        Padding="5"
                         Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodels:SelectableButtonGroupViewModel}}, Path=SelectOptionCommand}"
                         CommandParameter="{Binding}"
                         HorizontalOptions="FillAndExpand"
+                        MinimumHeightRequest="40"
                         Text="{Binding Text}"
                         VerticalOptions="FillAndExpand">
 
