--- a/HomeBudget.App/Views/ReportsPageAndroidView.xaml
+++ b/HomeBudget.App/Views/ReportsPageAndroidView.xaml
@@ -28,25 +28,18 @@
             ReportTableDT="{StaticResource ReportTable}" />
     </ContentPage.Resources>
 
-    <Grid BackgroundColor="{StaticResource White}" RowDefinitions="Auto,*,Auto">
+    <Grid BackgroundColor="{StaticResource White}" RowDefinitions="Auto,*">
 
-        <Grid
-            Margin="20,20,20,20"
-            RowDefinitions="Auto,Auto,*"
-            RowSpacing="10">
+        <Grid Margin="20,20,20,20">
 
             <Label
-                Grid.Row="0"
                 Style="{StaticResource H1Label}"
                 Text="{Binding Title}"
                 TextColor="{StaticResource Gray600}" />
-
-            <controls:SelectableButtonGroupView Grid.Row="1" BindingContext="{Binding SelectableButtonGroupVM}" />
         </Grid>
 
         <Border
             Grid.Row="1"
-            Grid.RowSpan="2"
             Padding="0"
             BackgroundColor="{StaticResource Gray100}"
             Stroke="{StaticResource Gray200}"
@@ -56,14 +49,21 @@
                 <RoundRectangle CornerRadius="15,15,0,0" />
             </Border.StrokeShape>
 
-            <Grid RowDefinitions="*,Auto">
+            <Grid RowDefinitions="Auto,*,Auto">
+
+                <reportsViews:FilterReportContentView
+                    Grid.Row="0"
+                    Margin="10"
+                    BindingContext="{Binding FilterVM}" />
 
                 <CarouselView
-                    Grid.Row="0"
+                    Grid.Row="1"
+                    IsSwipeEnabled="False"
                     IndicatorView="{x:Reference indicatorView}"
                     ItemTemplate="{StaticResource ReportTemplateSelector}"
                     ItemsSource="{Binding ReportsCarouselVMs}"
                     Position="{Binding CarouselPosition, Mode=TwoWay}" />
+
 
                 <IndicatorView
                     x:Name="indicatorView"
@@ -72,12 +72,50 @@
                     IndicatorColor="Gray"
                     SelectedIndicatorColor="Black" />
 
+
+
+                <Grid
+                    Grid.Row="2"
+                    Padding="10"
+                    BackgroundColor="{StaticResource White}">
+                    <VerticalStackLayout>
+                        <controls:SelectableButtonGroupView BindingContext="{Binding SelectableButtonGroupVM}" />
+
+                        <Grid ColumnDefinitions="*,*">
+                            <Label
+                                Grid.Column="0"
+                                HorizontalOptions="Start"
+                                Style="{StaticResource H2Label}"
+                                Text="Suma wydatków" />
+                            <Label
+                                Grid.Column="1"
+                                HorizontalOptions="End"
+                                Style="{StaticResource H2Label}"
+                                Text="32223" />
+                        </Grid>
+
+                        <BoxView HeightRequest="1" Color="{StaticResource Gray200}" />
+
+                        <Grid ColumnDefinitions="*,*">
+                            <Label
+                                Grid.Column="0"
+                                HorizontalOptions="Start"
+                                Style="{StaticResource H2Label}"
+                                Text="Średnio" />
+                            <Label
+                                Grid.Column="1"
+                                HorizontalOptions="End"
+                                Style="{StaticResource H2Label}"
+                                Text="12" />
+                        </Grid>
+
+                    </VerticalStackLayout>
+                </Grid>
             </Grid>
 
         </Border>
 
-
-
+        <controls:DropdownSelectTransactionCategoryContentView Grid.RowSpan="2" BindingContext="{Binding FilterVM.CategoriesDropDownVM}" />
         <controls:ActivityIndicatorFullPageContentView Grid.RowSpan="2" BindingContext="{Binding}" />
 
     </Grid>
