--- a/HomeBudget.App/Views/DashboardPageAndroidView.xaml
+++ b/HomeBudget.App/Views/DashboardPageAndroidView.xaml
@@ -9,6 +9,7 @@
     xmlns:icons="clr-namespace:HomeBudget.App.Resources.Icons"
     xmlns:viewmodels="clr-namespace:HomeBudget.App.ViewModels"
     xmlns:views="clr-namespace:HomeBudget.App.Views"
+    xmlns:widgetViews="clr-namespace:HomeBudget.App.Views.Widgets"
     x:DataType="viewmodels:DashboardPageViewModel">
 
     <Grid BackgroundColor="{StaticResource White}" RowDefinitions="Auto,*,Auto">
@@ -28,12 +29,10 @@
                 <RoundRectangle CornerRadius="15,15,0,0" />
             </Border.StrokeShape>
 
-            <ScrollView
-                Grid.Row="0"
-                Padding="15">
-                <VerticalStackLayout Spacing="15">
-                    <handViews:CurrentBudgetBalanceContentView BindingContext="{Binding CurrentBudgetBalanceVM}" />
+            <ScrollView Grid.Row="0" Padding="10">
+                <VerticalStackLayout Spacing="10">
                     <handViews:ShortcutsContentView BindingContext="{Binding ShortcutsVM}" />
+                    <widgetViews:FastBalanceContentView BindingContext="{Binding FastBalanceVM}" />
                     <!--<handViews:RegularTransactionsReminderContentView BindingContext="{Binding RegularTransactionsReminderVM}" />-->
                     <handViews:LastTransactionsReminderContentView BindingContext="{Binding LastTransactionsReminderVM}" />
                 </VerticalStackLayout>
