--- a/HomeBudget.App/Views/ContentViews/IconSelectContentView.xaml
+++ b/HomeBudget.App/Views/ContentViews/IconSelectContentView.xaml
@@ -45,64 +45,67 @@
             </Grid>
         </Border>
 
-        <ScrollView Grid.Row="1">
-            <CollectionView ItemsSource="{Binding IconCategories}">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="model:IconCategory">
-                        <Frame Margin="10,5,10,5" Padding="10">
-                            <VerticalStackLayout>
-                                <Label Style="{StaticResource H2Label}" Text="{Binding CategoryName}" />
-                                <CollectionView ItemsSource="{Binding Icons}">
-                                    <CollectionView.ItemsLayout>
-                                        <GridItemsLayout Orientation="Vertical" Span="5" />
-                                    </CollectionView.ItemsLayout>
-                                    <CollectionView.ItemTemplate>
-                                        <DataTemplate x:DataType="model:IconItem">
-                                            <Frame>
-                                                <Frame.GestureRecognizers>
-                                                    <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:IconSelectContentViewModel}}, Path=SelectIconCommand}" CommandParameter="{Binding}" />
-                                                </Frame.GestureRecognizers>
-                                                <Frame.Style>
-                                                    <Style BasedOn="{StaticResource RectangleSeletedBorderFrame}" TargetType="Frame">
-                                                        <Style.Triggers>
-                                                            <DataTrigger
-                                                                Binding="{Binding IsSelected}"
-                                                                TargetType="Frame"
-                                                                Value="True">
-                                                                <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
-                                                            </DataTrigger>
-                                                        </Style.Triggers>
-                                                    </Style>
-                                                </Frame.Style>
-                                                <Frame InputTransparent="True" Style="{StaticResource RectangleSeletedInnerFrame}">
-                                                    <Label Text="{Binding Unicode}">
-                                                        <Label.Style>
-                                                            <Style BasedOn="{StaticResource SeletedInnerIcon}" TargetType="Label">
-                                                                <Style.Triggers>
-                                                                    <DataTrigger
-                                                                        Binding="{Binding IsSelected}"
-                                                                        TargetType="Label"
-                                                                        Value="True">
-                                                                        <Setter Property="TextColor" Value="{StaticResource Primary}" />
-                                                                    </DataTrigger>
-                                                                </Style.Triggers>
-                                                            </Style>
-                                                        </Label.Style>
-                                                    </Label>
+        <Grid Grid.Row="1" Margin="10">
+            <ScrollView>
+                <CollectionView ItemsSource="{Binding IconCategories}">
+                    <CollectionView.ItemsLayout>
+                        <LinearItemsLayout ItemSpacing="5" Orientation="Vertical" />
+                    </CollectionView.ItemsLayout>
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="model:IconCategory">
+                            <Frame Padding="10">
+                                <VerticalStackLayout>
+                                    <Label Style="{StaticResource H2Label}" Text="{Binding CategoryName}" />
+                                    <CollectionView ItemsSource="{Binding Icons}">
+                                        <CollectionView.ItemsLayout>
+                                            <GridItemsLayout Orientation="Vertical" Span="5" />
+                                        </CollectionView.ItemsLayout>
+                                        <CollectionView.ItemTemplate>
+                                            <DataTemplate x:DataType="model:IconItem">
+                                                <Frame>
+                                                    <Frame.GestureRecognizers>
+                                                        <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:IconSelectContentViewModel}}, Path=SelectIconCommand}" CommandParameter="{Binding}" />
+                                                    </Frame.GestureRecognizers>
+                                                    <Frame.Style>
+                                                        <Style BasedOn="{StaticResource RectangleSeletedBorderFrame}" TargetType="Frame">
+                                                            <Style.Triggers>
+                                                                <DataTrigger
+                                                                    Binding="{Binding IsSelected}"
+                                                                    TargetType="Frame"
+                                                                    Value="True">
+                                                                    <Setter Property="BackgroundColor" Value="{StaticResource Primary}" />
+                                                                </DataTrigger>
+                                                            </Style.Triggers>
+                                                        </Style>
+                                                    </Frame.Style>
+                                                    <Frame InputTransparent="True" Style="{StaticResource RectangleSeletedInnerFrame}">
+                                                        <Label Text="{Binding Unicode}">
+                                                            <Label.Style>
+                                                                <Style BasedOn="{StaticResource SeletedInnerIcon}" TargetType="Label">
+                                                                    <Style.Triggers>
+                                                                        <DataTrigger
+                                                                            Binding="{Binding IsSelected}"
+                                                                            TargetType="Label"
+                                                                            Value="True">
+                                                                            <Setter Property="TextColor" Value="{StaticResource Primary}" />
+                                                                        </DataTrigger>
+                                                                    </Style.Triggers>
+                                                                </Style>
+                                                            </Label.Style>
+                                                        </Label>
+                                                    </Frame>
                                                 </Frame>
-                                            </Frame>
-                                        </DataTemplate>
-                                    </CollectionView.ItemTemplate>
-                                </CollectionView>
-                            </VerticalStackLayout>
+                                            </DataTemplate>
+                                        </CollectionView.ItemTemplate>
+                                    </CollectionView>
+                                </VerticalStackLayout>
 
-                        </Frame>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-        </ScrollView>
-
-
+                            </Frame>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </ScrollView>
+        </Grid>
     </Grid>
 
 
