--- a/HomeBudget.App/Views/ContentViews/Reports/ReportGraphContentView.xaml
+++ b/HomeBudget.App/Views/ContentViews/Reports/ReportGraphContentView.xaml
@@ -9,7 +9,7 @@
     xmlns:reportModels="clr-namespace:HomeBudget.App.ViewModels.ContentViewModels.Reports"
     xmlns:reportViews="clr-namespace:HomeBudget.App.Views.ContentViews.Reports"
     xmlns:universalViews="clr-namespace:HomeBudget.App.Views.ContentViews.UniversalControls"
-    x:DataType="reportModels:ReportGraphViewModel">
+    x:DataType="reportModels:ReportGraphBarViewModel">
 
     <Grid>
 
@@ -17,7 +17,8 @@
             LegendPosition="Top"
             Series="{Binding Series}"
             XAxes="{Binding XAxes}"
-            YAxes="{Binding YAxes}"  />
+            YAxes="{Binding YAxes}"
+            ZoomMode="X" />
 
     </Grid>
 
