--- a/HomeBudget.App/Views/ContentViews/UniversalControls/DropdownPickerTransactionCategoryContentView.xaml
+++ b/HomeBudget.App/Views/ContentViews/UniversalControls/DropdownPickerTransactionCategoryContentView.xaml
@@ -10,11 +10,11 @@
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     x:DataType="controlModels:DropdownTransactionCategoryContentViewModel">
 
-    <Frame Style="{StaticResource SecondaryEntryFrame}">
+    <Frame IsEnabled="{Binding IsEnable}" Style="{StaticResource SecondaryEntryFrame}">
         <Frame.GestureRecognizers>
             <TapGestureRecognizer Command="{Binding ToggleViewCommand}" />
         </Frame.GestureRecognizers>
-        <Grid ColumnDefinitions="Auto,*,Auto">
+        <Grid ColumnDefinitions="Auto,*,Auto" InputTransparent="True">
             <Label
                 Grid.Column="0"
                 Margin="10"
